--- a/Linear_Algebra_Sprint_Challenge.ipynb
+++ b/Linear_Algebra_Sprint_Challenge.ipynb
@@ -185,21 +185,23 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 52
         },
-        "outputId": "7bd77f83-6057-4327-fb8d-50a306af1989"
+        "outputId": "7c19c237-719f-4f4b-9d7b-938e889d5c2a"
       },
       "cell_type": "code",
       "source": [
         "b = [17,-4,-2,1]\n",
         "print(np.linalg.norm(b))\n",
+        "print(sum([x**2 for x in b]) ** 0.5)\n",
         "# norm is the magnitude aka length of a vector"
       ],
-      "execution_count": 4,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "17.60681686165901\n",
             "17.60681686165901\n"
           ],
           "name": "stdout"
@@ -228,21 +230,23 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 52
         },
-        "outputId": "8d954acc-3ab6-4a11-d281-c9d756b1b20a"
+        "outputId": "e985522c-8b3c-4edb-82ea-c886187179f2"
       },
       "cell_type": "code",
       "source": [
         "c = np.array([3, 7, -2, 12])\n",
         "d = np.array([9, -7, 4, 6])\n",
-        "print(np.dot(c,d))"
+        "print(np.dot(c,d))\n",
+        "print(3*9+7*-7 + -2*4 + 12*6)"
       ],
-      "execution_count": 5,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "42\n",
             "42\n"
           ],
           "name": "stdout"
@@ -389,7 +393,7 @@
       },
       "cell_type": "code",
       "source": [
-        "no, they are not normalized"
+        "no, they are not normalized or have a common scale"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1207,251 +1211,6 @@
           }
         }
       ]
-    },
-    {
-      "metadata": {
-        "id": "VTbttJAqkuRN",
-        "colab_type": "code",
-        "outputId": "50cb0e0a-2931-4484-b8f7-184c53438bbc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 3484
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "# We'll also turn the dataframe into an numpy array for you in case \n",
-        "# you're more familiar with using numpy arrays ;)\n",
-        "\n",
-        "# You may choose which one you would rather use.\n",
-        "\n",
-        "# Feel free to change the variable names if you don't like mine.\n",
-        "\n",
-        "numpy_points = points.values\n",
-        "print(numpy_points)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[ -7.84680264  -3.42127666]\n",
-            " [ -3.55432332  -6.88472945]\n",
-            " [ -0.19282234  -9.67103016]\n",
-            " [ -6.40145554  -5.22397192]\n",
-            " [ -0.8040258   -9.70445652]\n",
-            " [ -4.9771936   -6.13883603]\n",
-            " [ -8.11899027  -3.62410932]\n",
-            " [ -8.1456292   -2.78795056]\n",
-            " [ -3.56865911   5.40178102]\n",
-            " [ -5.71170922  -6.80201318]\n",
-            " [ -4.00606304  -7.99484628]\n",
-            " [ -4.34701906  -7.07327411]\n",
-            " [  0.02288488 -10.57220028]\n",
-            " [ -4.65338805  -8.10057054]\n",
-            " [ -8.26306683  -4.36478167]\n",
-            " [ -1.78925444 -11.0957949 ]\n",
-            " [ -7.56683375  -4.39166363]\n",
-            " [ -3.00212691  -5.73856732]\n",
-            " [ -2.57673872  -7.83223833]\n",
-            " [  6.74057358   4.13730878]\n",
-            " [ -7.96610489  -3.14997573]\n",
-            " [  6.26556835   5.01331613]\n",
-            " [  6.28517859   4.44708732]\n",
-            " [  6.40527985   4.38379283]\n",
-            " [ -2.68559499  -8.51265544]\n",
-            " [ -5.28302702  -9.34170965]\n",
-            " [  0.07097306 -10.11371322]\n",
-            " [ -1.64051597   4.00264149]\n",
-            " [ -4.60671171  -8.36655774]\n",
-            " [ -4.6838594   -7.26710703]\n",
-            " [ -3.16629032  -7.64623711]\n",
-            " [ -2.56850303  -7.13484226]\n",
-            " [ -0.09036863  -7.64228289]\n",
-            " [  6.8415471    2.62542108]\n",
-            " [ -6.41252467  -8.97155321]\n",
-            " [ -4.60823024  -6.99620796]\n",
-            " [ -2.71350147  -8.26037851]\n",
-            " [ -3.16471319  -6.47200385]\n",
-            " [ -3.65602793   4.42171019]\n",
-            " [ -1.552325    -9.33467641]\n",
-            " [  1.36739144 -10.77458169]\n",
-            " [  6.41960353   4.79764796]\n",
-            " [ -2.81173656   4.10609551]\n",
-            " [ -3.6922981    4.68773656]\n",
-            " [ -4.20618952   3.48466831]\n",
-            " [ -3.05144177  -5.14348609]\n",
-            " [ -1.84182037  -7.57734847]\n",
-            " [ -2.94741937  -6.83986788]\n",
-            " [ -8.25922705  -2.73102424]\n",
-            " [  0.05025867  -8.96513154]\n",
-            " [  4.11077574   4.35324074]\n",
-            " [ -6.45101016  -2.6383825 ]\n",
-            " [ -8.1987274   -3.0558165 ]\n",
-            " [ -4.10305359   4.05892927]\n",
-            " [  7.63180199   5.88305443]\n",
-            " [  1.39059029  -8.76917772]\n",
-            " [ -4.02059409  -6.5049644 ]\n",
-            " [ -5.11009933   3.41163516]\n",
-            " [ -3.96889717   4.47683113]\n",
-            " [ -8.54835662  -3.24021699]\n",
-            " [  4.7898772    3.39796438]\n",
-            " [ -0.30203971  -8.29327126]\n",
-            " [ -8.74859961  -3.22430316]\n",
-            " [ -3.54706653   4.95609902]\n",
-            " [  4.64370924   3.12619171]\n",
-            " [ -2.38877013   4.81681724]\n",
-            " [  6.03756775   4.34688145]\n",
-            " [ -3.6040341    3.34888672]\n",
-            " [ -6.60252931  -5.09530682]\n",
-            " [ -5.2570749    4.09267438]\n",
-            " [ -1.74863818  -7.14967648]\n",
-            " [ -3.93109356  -6.93074431]\n",
-            " [ -4.42331     -8.66892902]\n",
-            " [ -4.75551782  -8.39125882]\n",
-            " [  6.95540396   3.09377809]\n",
-            " [  7.0500742    3.11737684]\n",
-            " [ -4.80311857  -7.53955089]\n",
-            " [ -4.18997108  -7.65907662]\n",
-            " [ -2.09332462   3.99194269]\n",
-            " [  6.00652765   3.22917768]\n",
-            " [ -4.03818672   4.59980061]\n",
-            " [ -4.41703098  -6.24559395]\n",
-            " [ -4.19436544  -8.975763  ]\n",
-            " [ -3.76788213  -5.08305977]\n",
-            " [ -3.41389586   2.36649429]\n",
-            " [ -3.16797575  -7.10658902]\n",
-            " [ -3.73823882   3.66599927]\n",
-            " [ -3.02976815  -9.03642233]\n",
-            " [ -5.28252833  -8.67974398]\n",
-            " [  4.8076014    4.13519484]\n",
-            " [ -2.69624431   3.78941825]\n",
-            " [ -3.64239394  -7.42297132]\n",
-            " [  3.72872      2.5928597 ]\n",
-            " [ -2.52582889  -6.88636366]\n",
-            " [ -0.33749842 -10.88481269]\n",
-            " [ -4.30553109  -8.52907157]\n",
-            " [ -2.32555356  -7.34298373]\n",
-            " [ -3.74639247 -10.19902865]\n",
-            " [ -2.56573753  -6.56978879]\n",
-            " [  0.18181752 -10.08437364]\n",
-            " [ -2.79771581  -8.55948081]\n",
-            " [ -1.88540987  -6.55107598]\n",
-            " [ -9.22621441  -5.39142132]\n",
-            " [ -5.36675394  -7.77257972]\n",
-            " [ -3.74888988  -6.26165161]\n",
-            " [  7.01909419   2.72708944]\n",
-            " [ -9.2752388   -2.90227813]\n",
-            " [ -8.81644802  -4.53245424]\n",
-            " [ -8.4762924   -3.24445346]\n",
-            " [  5.86438886   4.65155037]\n",
-            " [ -1.25194633 -10.0212011 ]\n",
-            " [  6.06325242   3.25371568]\n",
-            " [ -4.2991717   -8.14292715]\n",
-            " [-10.11847312  -3.35352688]\n",
-            " [ -1.76735254  -8.06991415]\n",
-            " [ -4.87690213  -6.51669493]\n",
-            " [ -4.46220291   2.68216558]\n",
-            " [ -4.07921703   2.30462746]\n",
-            " [  7.18941834   4.43070908]\n",
-            " [ -5.2118049    4.75216774]\n",
-            " [  6.74597024   3.51192813]\n",
-            " [  1.09037656 -10.37429399]\n",
-            " [ -4.54124116 -10.030478  ]\n",
-            " [ -7.80293271  -4.12905153]\n",
-            " [ -5.51843637  -8.99786296]\n",
-            " [ -7.58913402  -3.26203958]\n",
-            " [ -2.36092827  -7.46404353]\n",
-            " [  6.6301605    4.04798165]\n",
-            " [ -3.23120817   3.40260416]\n",
-            " [ -8.14075748  -3.12282667]\n",
-            " [ -1.81445132 -10.22896287]\n",
-            " [ -8.90794399  -3.82491288]\n",
-            " [ -5.79324812  -9.17498226]\n",
-            " [ -9.408878    -2.81230384]\n",
-            " [ -4.48465879   4.05235335]\n",
-            " [ -1.83719667   4.48022706]\n",
-            " [ -0.72316787 -10.21010838]\n",
-            " [  7.70176821   3.23791985]\n",
-            " [ -8.7804158   -3.66380156]\n",
-            " [ -4.27959605  -7.14863075]\n",
-            " [ -1.90942572   4.75623422]\n",
-            " [ -3.4286084   -7.74052202]\n",
-            " [ -3.44993371  -8.90149048]\n",
-            " [  7.19326936   3.39345278]\n",
-            " [  0.33705916  -9.10921245]\n",
-            " [ -4.29973904   3.9155908 ]\n",
-            " [ -2.85468388  -6.95461797]\n",
-            " [ -4.32689918   5.04989571]\n",
-            " [ -8.9112633   -3.0937568 ]\n",
-            " [ -3.71045293  -7.54888612]\n",
-            " [ -3.36196046  -8.94855287]\n",
-            " [ -1.11837057  -9.475153  ]\n",
-            " [ -7.80035618  -4.51957114]\n",
-            " [  6.13450408   3.30507042]\n",
-            " [ -4.35371751  -9.17572147]\n",
-            " [ -4.07215846   5.01331006]\n",
-            " [  0.37322188  -9.81616956]\n",
-            " [  6.49245525   4.02844744]\n",
-            " [ -3.35126085  -5.86605412]\n",
-            " [ -9.47331985  -2.96707841]\n",
-            " [ -1.53395558 -10.30489651]\n",
-            " [ -3.21118321  -8.52105722]\n",
-            " [ -3.471184     5.11425073]\n",
-            " [ -8.73398896  -1.69045771]\n",
-            " [  5.61994199   3.3956305 ]\n",
-            " [  6.12105526   4.09632606]\n",
-            " [ -1.86253127  -8.21813537]\n",
-            " [ -2.72931589   2.90611642]\n",
-            " [ -0.06786526  -9.7903028 ]\n",
-            " [  0.76767946  -8.24233776]\n",
-            " [ -9.84832503  -4.33646208]\n",
-            " [ -0.45637126 -10.27474973]\n",
-            " [ -3.58174648   4.60920068]\n",
-            " [  7.80788463   3.46852196]\n",
-            " [ -0.58026095  -9.9127667 ]\n",
-            " [ -2.21628811  -7.17224002]\n",
-            " [ -3.4303692   -6.33690932]\n",
-            " [ -3.7185896   -8.09151633]\n",
-            " [ -5.70252222  -6.56360077]\n",
-            " [ -7.26221867  -4.39970327]\n",
-            " [ -4.18120458  -6.16626421]\n",
-            " [ -0.79916322  -8.39620791]\n",
-            " [ -3.38562764  -5.66049265]\n",
-            " [ -2.76058361  -8.1271259 ]\n",
-            " [ -1.77111315  -9.81486244]\n",
-            " [ -2.796932    -9.09006862]\n",
-            " [ -9.77017495  -4.5613408 ]\n",
-            " [  7.4304053    3.00441617]\n",
-            " [ -3.92266499   5.11732726]\n",
-            " [  0.04960262  -8.43200926]\n",
-            " [ -3.4884452   -8.01897549]\n",
-            " [ -9.15237278  -4.38075883]\n",
-            " [  6.33095646   4.60754314]\n",
-            " [ -7.48340385  -2.07158872]\n",
-            " [ -4.58111713  -9.28640981]\n",
-            " [ -3.5606887    4.56732041]\n",
-            " [  5.05121586   4.74508597]\n",
-            " [  6.12762387   4.28518769]\n",
-            " [ -1.78307825  -8.89039394]\n",
-            " [ -0.33958684  -8.34495248]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "qX0zKKznTzcI",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "##### Your Code Here #####"
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
